Improve contrast, fix canonical, etc.

--- a/common.css
+++ b/common.css
@@ -20,7 +20,7 @@
     /* Colors */
     --bg-color: #080808;
     --bg-secondary: #121212;
-    --text-color: #f0f0f0;
+    --text-color: #ffffff;
     --text-muted: #a0a0a0;
 
     --primary: #0284c7;
